--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "fullhousey-backend",
-  "version": "1.0.0",
-  "main": "main.ts",
+  "name": "fullhousey-admin-backend",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
-    "start": "ts-node main.ts",
-    "dev": "nodemon main.ts"
+    "dev": "tsx watch server.ts"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2"
   },
   "devDependencies": {
-    "ts-node": "^10.0.0",
-    "typescript": "^4.0.0",
-    "nodemon": "^2.0.0"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.4"
   }
 }
