--- a/package.json
+++ b/package.json
@@ -2,23 +2,19 @@
   "name": "fullhousey-admin",
   "private": true,
   "version": "0.1.0",
-  "type": "module",
+  "engines": { "node": "20.x" },
   "scripts": {
-    "dev": "concurrently -k \"npm -C backend run dev\" \"vite\"",
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.cjs",
+    "postinstall": "npm run build"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "express": "^4.19.2"
   },
   "devDependencies": {
-    "@types/node": "^22.5.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "concurrently": "^9.0.1",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.0"
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.4.0",
+    "vite": "^5.3.0"
   }
 }
