--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
-# Client (Vite needs VITE_*)
+# -------------------------
+# Client (Vite requires VITE_*)
+# -------------------------
 VITE_GA_MEASUREMENT_ID=
 VITE_GTM_CONTAINER_ID=
 
-# Server
+# -------------------------
+# Server-side (do NOT prefix with VITE_)
+# Set these in Vercel/Railway env, not in Git.
+# -------------------------
 GA_MEASUREMENT_ID=
 YOUTUBE_API_KEY=
 X_BEARER_TOKEN=
