--- a/package.json
+++ b/package.json
@@ -1,44 +1,19 @@
 {
-  "name": "fullhousey-admin",
-  "private": true,
-  "version": "0.1.0",
-  "engines": { "node": "20.x" },
+  "name": "fullhousey",
+  "version": "1.0.0",
+  "description": "FullHousey core app",
+  "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "dev:server": "ts-node-dev --respawn --transpile-only backend/server.ts",
-    "dev:client": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "type-check": "tsc --noEmit",
-    "lint": "eslint . --ext .ts,.tsx",
-    "start": "node dist/server.js",
-    "postinstall": "npm run build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5",
-    "express-fileupload": "^1.5.1",
+    "next": "^13.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1",
-    "zod": "^3.23.8",
-    "concurrently": "^8.2.2"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.4.0",
-    "vite": "^5.3.0",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/node": "^20.11.30",
-    "@types/express-fileupload": "^1.4.5",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
-    "@types/react-router-dom": "^5.3.3",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.2.5",
-    "ts-node-dev": "^2.0.0"
+    "react-dom": "^18.2.0"
   }
 }
