--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "fullhousey",
-  "version": "1.0.0",
-  "description": "FullHousey core app",
-  "main": "index.js",
+  "name": "fullhousey-admin",
+  "version": "0.1.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "engines": {
     "node": "20.x"
   },
-  "dependencies": {
-    "next": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+  "devDependencies": {
+    "vite": "^5.4.0"
   }
 }
