--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "fullhousey-admin",
-  "version": "0.1.0",
+  "name": "fullhousey-ui",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "engines": {
-    "node": "20.x"
-  },
   "dependencies": {
-    "vite": "^5.4.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "vite": "^4.5.0"
   }
 }
