--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
+
 {
-  "name": "fullhousey-admin",
+  "name": "fullhousey",
   "version": "1.0.0",
-  "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
-    "format": "prettier --write ."
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.5.0",
-    "typescript": "^5.2.0",
-    "eslint": "^8.45.0",
-    "prettier": "^3.0.0"
+    "vite": "^4.4.9"
   }
 }
